Change log next version
-----------------------
* Removed OSGi metadata because they didn't work properly

Change log 1.5.3 (2014-01-10)
-----------------------------
* Added OSGi metadata to manifest files (issue 204) (thanks to Gabor Liptak for patch)
* Upgraded to Javassist 3.18.1-GA.
* Test case with expectedExceptions no longer fails when using PowerMock with TestNG (issue 366) (thanks to majorpetya for the patch).
* Fixed a classloading issue with the JUnit4TestSuiteChunkerImpl (thanks to Robert Gay for the patch)
* Updated objenesis to version 2.1

Change log 1.5.2 (2013-11-18)
-----------------------------
* Fixed PowerMock OOM (OutOfMemory) issues with Mockito (big thanks to Henrik Karlsson for the patch).
* PowerMock EasyMock extension API now supports EasyMock version 3.2.
* Added jacoco agent to be deferred by the PowerMock classloader
* Updated TestNG dependency to 6.8.7.

Change log 1.5.1 (2013-06-19)
-----------------------------
* Maven no longer adds classpath to jar manifests when building PowerMock (issue 413).
* PowerMockRunner now supports both MethodRules and TestRules to comply with JUnit 4.11 (thanks to "Boris Code" for the patch) (issue 419).
* Slf4j MockPolicy in Mockito now works again (issue 431).
* Removed synchronized from all MockGateway methods in order to make it work with multi-threaded Mockito.
* The PowerMock runner for JUnit now supports assumeTrue(..) statements (issue 408).
* Mocked system classes are now invoked when it's casted into another (non-final) type (thanks to Jonatan Jonsson for the patch) (issue 445).
* TestNG state is cleaned up in a better way when a test fails (thanks to Jonatan Jonsson for the patch).
* PowerMock byte-code manipulation transformers now ignores classes it cannot load. This means that PowerMock works with better SPI's that have compile-time dependencies that are not available at runtime.
* Upgraded Javassist to version 1.8.0-GA.
* Upgraded to TestNG module to version 6.8.5